--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -4,12 +4,30 @@
 }
 
 body {
-    background-color: rgb(81, 133, 102);
-    color: brown;
+    background-color: #010101; /* o negro */
+   
 }
 
 h1 {
+    font-size: 50px; /*cambiar a rem*/
+    font-family: 'Permanent Marker', monospace;                   
     color: rgb(213, 235, 161);
+    
+}
+
+.titleFont {
+    font-family: 'Black Ops One', monospace;  
+}
+
+.buttonFont {
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.centrarElementos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .posts {
@@ -17,3 +35,10 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+.imgFooter {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
