--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,13 +1,14 @@
 <footer>
-    <div class="bg-success">
-      <div class="row container-fluid d-flex flex-column justify-content-center">
+    <div class="bg-success mt-5">
+      <div class="row container-fluid centerElementos">
         <div class="mt-4 mb-md-0">
           <a href="https://github.com/JGarcia575">
             <img 
             src="assets/footer.jpg" 
-            class="logo mx-auto d-block" 
+            class="mx-auto d-block imgFooter" 
             alt="logo del desarrollador de la aplicacion web"
-            style="width: 100px; height: 100px; border-radius: 50% ;" />
+            />
+            
           </a>
         </div>
         <div class="text-center text-white p-3 font-monospace">
@@ -15,3 +16,4 @@
         </div>
       </div>
     </div>
+</footer>
