--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -30,13 +30,13 @@
             <tr>
                 <td><%= post.id %></td>
                 <td><%= post.titulo %></td>
-                <td><%= post.contenido %></td>
+                <td><p><%= post.contenido %></p></td>
                 <td><img src="<%= post.url_imagen %>"  alt="imagen subida por el usuario" style="height: 100px; width: 100px;"></td>
                 <td><%= post.createdAt %></td>
                 <td>
                     <div class="btn-group" role="group" aria-label="botones de edición y eliminación de la información">
-                        <button class="btn btn-primary"><i class="bi bi-pencil"></i></button>
-                        <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                        <a href="/editar/<%= post.id %>" class="btn btn-primary"><i class="bi bi-pencil"></i></a>
+                        <a  href="/borrarPost/<%= post.id%>" class="btn btn-danger"><i class="bi bi-trash"></i></a> 
                     </div>
                 </td>
             </tr>
