--- a/src/views/createPost.ejs
+++ b/src/views/createPost.ejs
@@ -4,27 +4,29 @@
 <body>
   <%- include("partials/nav")%>
   <div class="container mt-4">
-    <div class="card border-light border-3 bg-dark">
-      <div class="card-header border-light border-2 fs-3 text-warning">Agregar nuevo tema</div>
-      <div class="card-body border-success text-warning ">
-          <form action="/guardar" method="post">
-              <div class="mb-3">
-                  <label for="titulo" class="form-label">Tema</label>
-                  <input type="text" class="form-control" id="titulo" name="titulo" required>
-              </div>
-              <div class="mb-3">
-                <label for="contenido" class="form-label" >Contenido</label>
-                <textarea class="form-control" rows="5" id="contenido" name="contenido"></textarea>
-              </div> 
-              <div class="mb-3">
-                  <label for="url_imagen" class="form-label">Url de la imagen</label>
-                  <input type="text" class="form-control" id="url_imagen" name="url_imagen" placeholder="Opcional">
-              </div>              
-              <button type="submit" class="btn btn-primary buttonFont">Guardar</button>
-              <a href="/posts" class="btn btn-danger buttonFont">Cancelar</a>
-          </form>
+    <div class="card">
+      <h5 class="card-header">Agregar publicación</h5>
+      <div class="card-body">
+        <form action="/guardar" method="post">
+          <div class="mb-3">
+            <label for="titulo" class="form-label">Titulo</label>
+            <input class="form-control" id="titlo" id="titulo" name="titulo" placeholder="Escribe el titlo de la publicación">
+          </div>
+          <div class="mb-3">
+            <label for="contenido" class="form-label">Escriba aquí</label>
+            <textarea class="form-control" id="contenido" name="contenido" rows="3"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="url_imagen" class="form-label">Url de la imagen</label>
+            <input type="text" class="form-control" id="url_imagen" name="url_imagen" placeholder="Opcional">
+        </div>  
+          <button type="submit" class="btn btn-primary buttonFont">Enviar</button>
+          <a href="/posts" class="btn btn-warning buttonFont">Cancelar</a>
+        </form>       
       </div>
-  </div>
+    </div>
+  </div> 
+  
 </body>
 <footer>
   <%- include("partials/footer")%>
