--- a/src/views/editPost.ejs
+++ b/src/views/editPost.ejs
@@ -4,53 +4,35 @@
 
 <body>
   <%- include("partials/nav")%>
-
-  <!-- <% if (post) { %> <% } %> -->
   <div class="container mt-4">
-    <div class="card border-light border-3 bg-dark">
-      <div class="card-header border-light border-2 fs-3 text-warning">Editar tema</div>
-      <div class="card-body border-success text-warning ">
-          <form action="/actualizarPost" method="post">
-              <input 
-              name="id" 
-              value="<%= post.id %>" 
-              hidden>
-              <div class="mb-3">
-                  <label for="titulo" class="form-label">Tema</label>
-                  <input 
-                  type="text" 
-                  class="form-control" 
-                  id="titulo" 
-                  name="titulo" 
-                  value="<%= post.titulo %>" 
-                  required>
-              </div>
-              <div class="mb-3">
-                <label for="contenido" class="form-label" >Contenido</label>
-                <p><textarea 
-                class="form-control" 
-                rows="5" 
-                id="contenido" 
-                name="contenido" 
-                value="<%= post.contenido %>">  
-                </textarea></p>
-              </div> 
-              <div class="mb-3">
-                  <label for="url_imagen" class="form-label">Url de la imagen</label>
-                  <input 
-                  type="text" 
-                  class="form-control" 
-                  id="url_imagen" 
-                  name="url_imagen" 
-                  value="<%= post.url_imagen %>" 
-                  placeholder="Opcional">
-              </div>              
-              <button type="submit" class="btn btn-primary buttonFont">Guardar</button>
-              <a href="/posts"  class="btn btn-danger buttonFont">Cancelar</a>
-          </form>
+    <div class="card">
+      <h5 class="card-header">Editar publicación</h5>
+      <div class="card-body">
+        <form action="/actualizar" method="post">
+          <div class="mb-3">
+            <input name="id" value="<%= post.id %>" hidden>
+          </div>
+          <div class="mb-3">
+            <label for="titulo" class="form-label">Titulo</label>
+            <input class="form-control" id="titlo" id="titulo" name="titulo" value="<%= post.titulo %>" placeholder="Escribe el titlo de la publicación">
+          </div>
+          <div class="mb-3">
+            <label for="contenido" class="form-label">Escriba aquí</label>
+            <textarea class="form-control" id="contenido" name="contenido" rows="3"><%= post.contenido %></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="url_imagen" class="form-label">Url de la imagen</label>
+            <input type="text" class="form-control" id="url_imagen" name="url_imagen" value="<%=post.url_imagen %>" placeholder="Opcional">
+        </div>  
+          <button type="submit" class="btn btn-primary buttonFont">Enviar</button>
+          <a href="/posts" class="btn btn-warning buttonFont">Cancelar</a>
+        </form>       
       </div>
-  </div>
- </body>
+    </div>
+  </div> 
+</body>
 <footer>
-  <%- include("partials/footer")%>
+  <%- include("partials/footer") %>
 </footer>
+
+  
