--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPICA FORO</title>
-    <link rel="icon" type="image/x-icon"  href="/assets/icon2.png">
-       
+    <link rel="icon" type="image/x-icon"  href="/assets/icon2.png">       
      <!--Importar bootstrap-->
      <link 
      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -15,6 +14,10 @@
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <!--Importar css propio-->
      <link rel="stylesheet" href="/css/styles.css">
+     <!--Importar google fonts-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Courier+Prime&family=IBM+Plex+Mono&family=IBM+Plex+Serif:wght@100&family=Permanent+Marker&display=swap" rel="stylesheet"> 
      <!--Importar bootstrap-->
      <script 
      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
